--- a/css/accordian.css
+++ b/css/accordian.css
@@ -6,34 +6,37 @@
 
 	background: linear-gradient(#004050, #002535);
 	/*margin: 0px auto 0 auto;*/
-	/*margin: 0px 15px 15px 0px;*/
+	margin: 0px 15px 15px 0px;
 	width:80%;
     height: 70%;
     float: right;
 	color: white;
+	text-align: left;
 }
 
 #accordian h3 {
 	font-size: 16px;
 	line-height: 34px;
-	text-align: top;
-	float: top;
+	/*text-align: top;*/
+	/*float: top;*/
 	padding: 0 10px;
 	cursor: pointer;
 	background: linear-gradient(#003040, #002535);
 }
+
 /*list items*/
-#accordian #course # grade {
-	display: inline;
+#accordian p{
 	list-style-type: none;
+	/*text-decoration: none;*/
+	display: inline;
 	padding-right: 20px;
-	/*list-style-type: none;*/
 }
 /*links*/
-#accordian ul ul li a {
+/*#accordian li a {
+
 	color: white;
-	text-decoration: none;
+	list-style-type: none;
 	/*font-size: 11px;*/
 	line-height: 27px;
-	/*padding: 15px 15px;*/
-}
+	padding: 15px 15px;
+}*/
