--- a/css/accordian.css
+++ b/css/accordian.css
@@ -8,7 +8,7 @@
 	margin-left: 300px;
 	/*width:80%;*/
     /*height: 70%;*/
-
+	border-radius: 25px;
     float: left;
 	color: white;
 	text-align: left;
@@ -17,9 +17,11 @@
 #accordian h3 {
 	font-size: 16px;
 	line-height: 34px;
+	text-align: left;
 	/*text-align: top;*/
 	/*float: top;*/
-	padding: 0 10px;
+	/*margin: 100px;*/
+	padding-left: 0px;
 	cursor: pointer;
 	background: linear-gradient(#003040, #002535);
 }
@@ -30,12 +32,9 @@
 	text-decoration: none;
 	/*display: inline;*/
 	background:#00253e;
-	padding-right: 20px;
+	/*padding-right: 20px;*/
 }
 
 #accordian ul{
-	color: white;
 	list-style-type: none;
-	/*font-size: 11px;*/
-	/*line-height: 27px;*/
 }
